--- a/app/Resources/views/frontend.html.twig
+++ b/app/Resources/views/frontend.html.twig
@@ -1,39 +1,25 @@
-{# app/Resources/views/frontend.html.twig#}
+{# app/Resources/views/frontend.html.twig #}
+{% extends '::base.html.twig' %}
 {% set ciudadSeleccionada = app.request.attributes.has('ciudad')
 ? app.request.attributes.get('ciudad')
 : ciudad_por_defecto %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block title %}{% endblock %}| Cupon</title>
-</head>
-<body id="{% block id '' %}"><div id="contenedor">
-    <header>
-        <h1><a href="{{ path('portada',{'ciudad': ciudadSeleccionada}) }}">CUPON</a></h1>
-        <nav>
-            <ul>
-                <li><a href="{{ path('portada',{'ciudad': ciudadSeleccionada}) }}">Oferta del día</a></li>
-                <li><a href="#">Ofertas recientes</a></li>
-                <li><a href="#">Mis ofertas</a></li>
-            </ul>
-        </nav>
-    </header>
+{% block stylesheets %}{% endblock %}
+{% block javascripts %}{% endblock %}
+{% block body %}
+<header>
+    <h1><a href="{{ path('portada', {'ciudad': ciudadSeleccionada}) }}">CUPON</a></h1>
+    <nav>
+        <ul>
+            <li><a href="{{ path('portada', {'ciudad': ciudadSeleccionada}) }}">Oferta del día</a></li>
+            <li><a href="#">Ofertas recientes</a></li>
+            <li><a href="#">Mis ofertas</a></li>
+        </ul>
+    </nav>
+</header>
     <article>
         {% block article %}{% endblock %}
     </article>
     <aside>
         {% block aside %}{% endblock %}
     </aside>
-    <footer>
-        &copy; {{ 'now' | date('Y') }} - Cupon
-        <a href="{{ path('pagina_estatica', { 'pagina': 'ayuda' }) }}">Ayuda</a>
-        <a href="{{ path('pagina_estatica', { 'pagina': 'contacto' })
-        }}">Contacto</a>
-        <a href="{{ path('pagina_estatica', { 'pagina': 'privacidad' })
-        }}">Privacidad</a>
-        <a href="{{ path('pagina_estatica', { 'pagina': 'sobre-nosotros' })
-        }}">Sobre nosotros</a>
-    </footer>
-</div></body>
-</html>
+{% endblock %}
