--- a/app/Resources/views/frontend.html.twig
+++ b/app/Resources/views/frontend.html.twig
@@ -3,7 +3,14 @@
 {% set ciudadSeleccionada = app.request.attributes.has('ciudad')
 ? app.request.attributes.get('ciudad')
 : ciudad_por_defecto %}
-{% block stylesheets %}{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('bundles/oferta/css/normalizar.css') }}"
+          rel="stylesheet" type="text/css"/>
+    <link href="{{ asset('bundles/oferta/css/comun.css') }}"
+          rel="stylesheet" type="text/css"/>
+    <link href="{{ asset('bundles/oferta/css/frontend.css') }}"
+          rel="stylesheet" type="text/css"/>
+{% endblock %}
 {% block javascripts %}{% endblock %}
 {% block body %}
 <header>
