--- a/app/Resources/views/frontend.html.twig
+++ b/app/Resources/views/frontend.html.twig
@@ -1,8 +1,7 @@
 {# app/Resources/views/frontend.html.twig #}
 {% extends '::base.html.twig' %}
-{% set ciudadSeleccionada = app.request.attributes.has('ciudad')
-? app.request.attributes.get('ciudad')
-: ciudad_por_defecto %}
+{% set ciudadSeleccionada = app.request.attributes.get('ciudad',
+ciudad_por_defecto) %}
 {% block stylesheets %}
     <link href="{{ asset('bundles/oferta/css/normalizar.css') }}"
           rel="stylesheet" type="text/css"/>
@@ -20,6 +19,8 @@
             <li><a href="{{ path('portada', {'ciudad': ciudadSeleccionada}) }}">Oferta del día</a></li>
             <li><a href="#">Ofertas recientes</a></li>
             <li><a href="#">Mis ofertas</a></li>
+
+            <li>{{ render(controller('CiudadBundle:Default:listaCiudades',{'ciudad': ciudadSeleccionada})) }}</li>
         </ul>
     </nav>
 </header>
